# severless-pypi

./: Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: quality.yml  testing.yml
deploying/terraform/: .terraform.lock.hcl  iam.tf  images.tf  main.tf  outputs.tf  providers.tf  variables.tf
e2e/: e2e.env  e2e.py  requirements.txt
src/: config.rs  controller.rs  errors.rs  index.rs  main.rs  pep_691.rs  states.rs
worker/: Dockerfile  requirements.txt  worker.py  worker_test.py
