[package]
name = "sls-pypi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
rust-s3 = { version = "0.32.3", features = ["tokio-rustls-tls "] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-rustls = "0.23.2"
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
derive = "1.0.0"
serde_json = "1.0.93"
tower-http = { version = "0.3.5", features = ["trace"] }
flate2 = "1.0.25"
