[package]
name = "sls-pypi"
version = "0.1.0"
edition = "2021"

authors = ["cyclimse"]
license-file = "LICENSE"

[dependencies]
axum = "0.6.7"
aws-credential-types = { version = "*", features = ["hardcoded-credentials"] }
aws-smithy-client = { version = "*" }
aws-sdk-config = { version = "*" }
aws-sdk-s3 = { version = "0.24.0", features = [], default-features = false }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-rustls = "0.23.2"
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
derive = "1.0.0"
serde_json = "1.0.93"
serde_plain = "1.0"
tower-http = { version = "0.4.0", features = ["trace"] }
flate2 = "1.0.25"
